--- a/hack-express/views/Notes.jade
+++ b/hack-express/views/Notes.jade
@@ -15,220 +15,33 @@
 //-
 
 //-
-//-   Authors:  Robert Dunigan
+//-   Authors: Robert Dunigan
 //-
+extends layout
 
-!!! 5
-html
+//-  div.container
+//-    div.fluid-container
+//-      div.row-fluid
 
-  include includes/head
-    
-  body(onload='initTokens();')
+block content
+  
+  div.span9.well.bs-docs.sidebar
     h2 Notes
-    div#wrapper
-      div#tabContainer
-        div.tabs
-          ul
-            li#tabHeader_1 Network information
-            li#tabHeader_2 Credentials
-            li#tabHeader_3 Crypto
-            li#tabHeader_4 Miscellaneous
-        br
-        div.tabscontent
-          div#tabpage_1.tabpage
-            table#networkTable(name='networkTable')
-              tr
-                td
-                  form#networkInfo(method='post', action='/notes/submitNetwork')
-                    label(for='fqdn') FQDN:  
-                    input#fqdn(type='text', name='fqdn', tabindex='1', required='false/')
-                    br
-                    label(for='ipAddress') iP Address:  
-                    input#ipAddress(type='text', name='ipAddress', tabindex='2', required='false/')
-                    br
-                    label(for='macAddress') MAC Address:  
-                    input#macAddress(type='text', name='macAddress', tabindex='3', required='false/')
-                  button#submit(type='submit', form='networkInfo', name='networkSubmit', value='Submit', tabindex='4') Submit
-                td
-                  table#netTokenTable.token(name='netTokenTable')
-                    thead
-                      tr
-                        th FQDN
-                        th iP Address
-                        th MAC Address
-                    tbody
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-          div#tabpage_2.tabpage
-            table#credentialTable(name='credentialTable')
-              tr
-                td
-                  form#credentialInfo(method='post', action='/notes/submitCredentials)
-                    label(for='userName') Username:  
-                    input#userName(type='text', name='userName', tabindex='1', required='false/')
-                    br
-                    label(for='password') Password:  
-                    input#password(type='password', name='password', tabindex='2', required='false/')
-                  button#submit(type='submit', form='credentialInfo', name='credentialSubmit', value='Submit', tabindex='3') Submit
-                td
-                  table#credTokenTable.token(name='credTokenTable')
-                    thead
-                      tr
-                        th Username
-                        th Password
-                    tbody
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-          div#tabpage_3.tabpage
-            table#cryptoTable(name='cryptoTable')
-              tr
-                td
-                  form#cryptoInfo(method='post', action='/notes/submitCrypto')
-                    label(for='cypherText') Cypher Text:  
-                    textarea#cypherText(name='cypherText', tabindex='1', required='false/')
-                    br
-                    label(for='plainText') Plain Text:  
-                    textarea#plainText(name='plainText', tabindex='2', required='false/')
-                  button#submit(type='submit', form='cryptoInfo', name='cryptoSubmit', value='Submit', tabindex='3') Submit
-                td
-                  table#cryptoTokenTable.token(name='cryptoTokenTable')
-                    thead
-                      tr
-                        th Cypher Text
-                        th Plain Text
-                    tbody
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-          div#tabpage_4.tabpage
-            table#miscTable(name='miscTable')
-              tr
-                td
-                  form#miscInfo(method='post', action='/notes/submitMisc')
-                    label(for='name') Name:  
-                    input#name(type='text', name='name', tabindex='1', required='false/')
-                    br
-                    label(for='dob') Date of Birth:  
-                    input#dob(type='date', name='dob', tabindex='2', required='false/')
-                    br
-                    label(for='email') Email:  
-                    input#email(type='email', name='email', tabindex='3', required='false/')
-                    br
-                    label(for='telephoneNumber') Telephone Number:  
-                    input#telephoneNumber(type='tel', name='telephoneNumber', tabindex='4', required='false/')
-                    br
-                    label(for='miscNumber') Misc Number:  
-                    input#miscNumber(type='number', name='miscNumber', tabindex='5', required='false/')
-                    br
-                    label(for='file') File:  
-                    input#file(type='file', name='file', tabindex='6', required='false/')
-                    br
-                    label(for='image') image:  
-                    input#image(type='image', name='image', tabindex='7', required='false/')
-                    br
-                    label(for='url') URL:  
-                    input#url(type='url', name='url', tabindex='8', required='false/')
-                  button#submit(type='submit', form='miscInfo', name='miscSubmit', value='Submit', tabindex='9') Submit
-                td
-                  table#miscTokenTable.token(name='miscTokenTable')
-                    thead
-                      tr
-                        th Name
-                        th Date of Birth
-                        th Email
-                        th Telephone Number
-                        th Misc Number
-                        th File
-                        th image
-                        th URL
-                    tbody
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                      tr
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-                        td ...
-    script(src='/javascripts/tabs.js')
-    ul#items
+    ul#myTab.nav.nav-tabs(data-tabs='tabs')
+      li.active
+        a(href='#personal', data-toggle='tab') Personal
+      li
+        a(href='#team', data-toggle='tab') Team
+    div.tab-content
+      div#personal.tab-pane.active
+        input(type='textarea', rows='900', cols='150', wrap='hard', name='userNotes', placeholder='User Notes', value='User Notes', readonly='readonly')
+      div#team.tab-pane
+        input(type='textarea', rows='900', cols='150', wrap='hard', name='teamNotes', placeholder='Team Notes', value='Team Notes', readonly='readonly')
+
+    p
+    input(type='textarea', rows='300', cols='150', wrap='hard', name='userInput', placeholder='Enter Notes', spellcheck='true', value='Enter Notes here')
+    span.icon-bar
+    button.btn(type='submit') Submit
+              //-td #{note.username}
+              //-td #{note.text}
+  include includes/sponsors
