--- a/hack-express/views/layout.jade
+++ b/hack-express/views/layout.jade
@@ -36,8 +36,8 @@ html
                 a(href="/scoreboard") Scoreboard
               li
                 a(href="/submissions") Submissions
-              // li
-              //   Notes
+              li
+                a(href="/notes") Notes
               li
                 a(href="/hints") Hints
           - if (typeof user !== 'undefined')
