--- a/hack-express/views/includes/head.jade
+++ b/hack-express/views/includes/head.jade
@@ -33,3 +33,5 @@ head
   link(rel='stylesheet', type='text/css', href='/stylesheets/style.css')
   script(src="/javascripts/jquery-2.0.2.min.js")
   script(src="/javascripts/application.js")
+  script(src="/javascripts/bootstrap.js")
+  script(src="/javascripts/bootstrap.min.js")
