--- a/hack-express/views/admin/partials/hint.jade
+++ b/hack-express/views/admin/partials/hint.jade
@@ -21,4 +21,4 @@ div(style="margin: 5px;").row-fluid
     div.span3
         p.pull-right
             a(href="/admin/hints/#{hint._id}/edit", id="#{hint._id}").btn.btn-primary Edit
-            a(href="/admin/hints/#{hint._id}", data-method="DELETE", rel="nofollow").btn.btn-danger.delete-button Delete
+            a(href="/admin/hints/#{hint._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
