--- a/hack-express/views/admin/teams/edit.jade
+++ b/hack-express/views/admin/teams/edit.jade
@@ -29,4 +29,4 @@ block admin_content
           select 
       div.form-actions
           button(type="submit").btn.btn-primary Save changes
-          button(type="cancel")#cancel.btn Cancel
+          a(href="/admin/teams").btn.btn-link Cancel
