resolved edit user cancel redirect issue.

--- a/hack-express/views/admin/users/edit.jade
+++ b/hack-express/views/admin/users/edit.jade
@@ -29,4 +29,4 @@ block admin_content
           input(type="password", name="confirm", placeholder="Confirm Password", value="#{user.password")
       div.form-actions
           button(type="submit").btn.btn-primary Save changes
-          a(href="/admin/teams").btn.btn-link Cancel
+          a(href="/admin/users").btn.btn-link Cancel
