added create new hint functionality.

--- a/hack-express/views/admin/hints/index.jade
+++ b/hack-express/views/admin/hints/index.jade
@@ -17,5 +17,7 @@
 extends ../admin_layout
 
 block admin_content
+  div.row-fluid
+    a(href="/admin/hints/new").btn.btn-primary Create New Hint
   each hint in hints
     include ../partials/hint
