--- a/hack-express/views/admin/partials/hint.jade
+++ b/hack-express/views/admin/partials/hint.jade
@@ -20,5 +20,6 @@ div(style="margin: 5px;").row-fluid
             | #{hint.title}
     div.span3
         p.pull-right
-            a(href="/admin/hints/#{hint._id}/edit", id="#{hint._id}").btn.btn-primary Edit
+            a(href="/admin/hints/#{hint._id}").btn View
+            a(href="/admin/hints/#{hint._id}/edit", style="margin-left: 5px").btn.btn-primary Edit
             a(href="/admin/hints/#{hint._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
