added cancel link to new hint form.

--- a/hack-express/views/admin/hints/new.jade
+++ b/hack-express/views/admin/hints/new.jade
@@ -27,4 +27,4 @@ block admin_content
             | #{hint.description}
           div.form-actions
             button(type="submit").btn.btn-primary Create
-            button(style="margin-left: 5px", type="cancel")#cancel.btn Cancel
+            a(href="/admin/hints", style="margin-left: 5px", type="cancel").btn.btn-link Cancel
