added pagination functionality to admin teams view.

--- a/hack-express/views/admin/admin_layout.jade
+++ b/hack-express/views/admin/admin_layout.jade
@@ -21,6 +21,6 @@ block content
     div.row-fluid
       div.span3
         include admin_navigation
-      div.span9
-        div.well
+      div.span9.well
+        div.page-header
           block admin_content
