--- a/hack-express/views/admin/partials/team.jade
+++ b/hack-express/views/admin/partials/team.jade
@@ -14,12 +14,11 @@
 //-   limitations under the License.
 //-
 
-div(style="margin: 5px;").row-fluid
-    div.span9
-        p
-            | #{team.name}
-    div.span3
-        p.pull-right
+tr
+    td
+        | #{team.name}
+    td
+        span.pull-right
             a(href="/admin/teams/#{team.id}").btn View
             a(href="/admin/teams/#{team._id}/edit", style="margin-left: 5px").btn.btn-primary.edit-btn Edit
             a(href="/admin/teams/#{team._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
