--- a/hack-express/views/admin/partials/user.jade
+++ b/hack-express/views/admin/partials/user.jade
@@ -14,12 +14,11 @@
 //-   limitations under the License.
 //-
 
-div(style="margin: 5px;").row-fluid
-    div.span9
-        p
-            | #{user.username}
-    div.span3
-        p.pull-right
+tr
+    td
+        | #{user.username}
+    td
+        span.pull-right
             a(href="/admin/users/#{user._id}").btn View
             a(href="/admin/users/#{user._id}/edit", style="margin-left: 5px").btn.btn-primary.edit-btn Edit
             a(href="/admin/users/#{user._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
