--- a/hack-express/public/stylesheets/style.css
+++ b/hack-express/public/stylesheets/style.css
@@ -3,6 +3,10 @@ body {
 	padding-bottom: 40px;
 }
 
+.pagination {
+	margin: 0px 0px 0px 0px;
+}
+
 [class^="icon-"],
 [class*=" icon-"] {
 	background-image: url('/images/glyphicons-halflings.png')
