--- a/hack-express/views/admin/users/index.jade
+++ b/hack-express/views/admin/users/index.jade
@@ -17,7 +17,7 @@
 extends ../admin_layout
 
 block admin_content
-  h1 Teams
+  h2 Users
   div.row-fluid
     a(href="/admin/users/new").pull-right.btn.btn-primary Create New User
   table.table.table-bordered.table-striped
