--- a/hack-express/views/admin/partials/token.jade
+++ b/hack-express/views/admin/partials/token.jade
@@ -14,12 +14,11 @@
 //-   limitations under the License.
 //-
 
-div(style="margin: 5px;").row-fluid
-    div.span9
-        p
-            | #{token.description}
-    div.span3
-        p.pull-right
+tr
+    td
+        | #{token.description}
+    td
+        span.pull-right
             a(href="/admin/tokens/#{token._id}").btn View
             a(href="/admin/tokens/#{token._id}/edit", style="margin-left: 5px").btn.btn-primary Edit
             a(href="/admin/tokens/#{token._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
