modified admint hints index view to use table instead of div

--- a/hack-express/views/admin/partials/hint.jade
+++ b/hack-express/views/admin/partials/hint.jade
@@ -19,6 +19,6 @@ tr
         | #{hint.title}
     td
         span.pull-right
-            a(href="/admin/hints/#{hint._id}/show").btn View
-            a(href="/admin/hints/#{hint._id}/edit", style="margin-left: 5px").btn.btn-primary.edit-btn Edit
+            a(href="/admin/hints/#{hint._id}").btn View
+            a(href="/admin/hints/#{hint._id}/edit", style="margin-left: 5px").btn.btn-primary Edit
             a(href="/admin/hints/#{hint._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
