--- a/hack-express/public/stylesheets/style.css
+++ b/hack-express/public/stylesheets/style.css
@@ -3,6 +3,18 @@ body {
 	padding-bottom: 40px;
 }
 
+div#personalNotes>input,textarea, .uneditable-input {
+	width:98%;
+	height:80%;
+	resize:vertical;
+}
+
+div#teamNotes>input,textarea, .uneditable-input {
+	width:98%;
+	height:80%;
+	resize:vertical;
+}
+
 .pagination {
 	margin: 0px 0px 0px 0px;
 }
