--- a/hack-express/views/Submissions.jade
+++ b/hack-express/views/Submissions.jade
@@ -29,7 +29,7 @@ block content
     h2 Submissions
     
     form.form-inline(method='post', action='/submissions/submit')
-      input(type='password', name='tokenID', placeholder="Enter Token ID")
+      input(type='password', name='tokenID', placeholder="Enter Token ID", autofocus)
       span.icon-bar
       button.btn(type='submit') Submit
     div
