Added sponsors' logos

--- a/hack-express/views/includes/sponsors.jade
+++ b/hack-express/views/includes/sponsors.jade
@@ -1,3 +1,14 @@
 div.span3.well
   h2 Sponsors
-  img.img-rounded(src='images/lce-logo.jpeg')
+  img.img-rounded(src='images/logo-qinetiq.png')
+  img.img-rounded(src='images/logo-lce.png')
+  img.img-rounded(src='images/logo-sag-gs.png')
+  img.img-rounded(src='images/logo-stopso.png')
+  img.img-rounded(src='images/logo-geocent.png')
+  img.img-rounded(src='images/logo-honeywell.png')
+  img.img-rounded(src='images/logo-avwired.png')
+  img.img-rounded(src='images/logo-src.png')
+  img.img-rounded(src='images/logo-dell.png')
+  img.img-rounded(src='images/logo-pivotal.png')
+  img.img-rounded(src='images/logo-manga.png')
+  img.img-rounded(src='images/logo_crowne-plaza.png')
