Fixed annoying checkbox display error

--- a/hack-express/views/admin/hints/edit.jade
+++ b/hack-express/views/admin/hints/edit.jade
@@ -26,7 +26,12 @@ block admin_content
           label Description
           input(type="textarea", name="description", value="#{hint.description}")
           label.checkbox Revealed
-            input(type="checkbox", name="revealed", checked=(#{hint.revealed} === true ? "checked" : undefined))
+            - if(hint.revealed){
+              input(type="checkbox", name="revealed", checked)
+            - }
+            - else {
+              input(type="checkbox", name="revealed")
+            - }
         div.form-actions
             button(type="submit").btn.btn-primary Save changes
             a(href="/admin/hints").btn.btn-link Cancel
