--- a/hack-express/views/admin/partials/user.jade
+++ b/hack-express/views/admin/partials/user.jade
@@ -19,6 +19,6 @@ tr
         | #{user.username}
     td
         span.pull-right
-            a(href="/admin/users/#{user._id}").btn View
+            a(href="/admin/users/#{user._id}/show").btn View
             a(href="/admin/users/#{user._id}/edit", style="margin-left: 5px").btn.btn-primary.edit-btn Edit
             a(href="/admin/users/#{user._id}", style="margin-left: 5px", data-method="delete", rel="nofollow").btn.btn-danger.delete-button Delete
