--- a/hack-express/views/admin/teams/edit.jade
+++ b/hack-express/views/admin/teams/edit.jade
@@ -22,7 +22,7 @@ block admin_content
       fieldset
           legend Edit Team
           label Team Name
-          input(type="text", name="name", placeholder="Enter Team Name", value="#{team.name}")
+          input(type="text", name="name", placeholder="Enter Team Name", value="#{team.name}", autofocus)
           label Team Members
           input(type="textarea")
           label Team Captain
