--- a/hack-express/views/admin/tokens/edit.jade
+++ b/hack-express/views/admin/tokens/edit.jade
@@ -22,7 +22,7 @@ block admin_content
       fieldset
           legend Edit Token
           label Value
-          input(type="text", name="value", value="#{token.value}")
+          input(type="text", name="value", value="#{token.value}", autofocus)
           label Points
           input(type="text", name="points", value="#{token.points}");
           label Description
