--- a/hack-express/views/admin/tokens/new.jade
+++ b/hack-express/views/admin/tokens/new.jade
@@ -21,7 +21,7 @@ block admin_content
       fieldset
           legend Create New Token
           label Value
-          input(type="text", name="value", placeholder="Enter Token Value", value="#{token.value}")
+          input(type="text", name="value", placeholder="Enter Token Value", value="#{token.value}", autofocus)
           label Points
           input(type="text", name="points", placeholder="Enter Token Points", value="#{token.points}");
           label Description
