--- a/hack-express/views/admin/users/edit.jade
+++ b/hack-express/views/admin/users/edit.jade
@@ -22,7 +22,7 @@ block admin_content
       fieldset
           legend Edit User
           label Username
-          input(type="text", name="username", placeholder="Enter User Name", value="#{user.username}")
+          input(type="text", name="username", placeholder="Enter User Name", value="#{user.username}", autofocus)
           label Password
           input(type="password", name="password", placeholder="Enter Password", value="#{user.password")
           label Confirm
