--- a/hack-express/views/admin/hints/edit.jade
+++ b/hack-express/views/admin/hints/edit.jade
@@ -22,7 +22,7 @@ block admin_content
       fieldset
           legend Edit Hint
           label Title
-          input(type="text", name="title", placeholder="Enter Hint Title", value="#{hint.title}")
+          input(type="text", name="title", placeholder="Enter Hint Title", value="#{hint.title}", autofocus)
           label Description
           input(type="textarea", name="description", value="#{hint.description}")
           label.checkbox Revealed
