--- a/hack-express/views/admin/users/new.jade
+++ b/hack-express/views/admin/users/new.jade
@@ -21,7 +21,7 @@ block admin_content
       fieldset
           legend Create New User
           label Username
-          input(type="text", name="username", placeholder="Enter User Name", value="#{user.username}")
+          input(type="text", name="username", placeholder="Enter User Name", value="#{user.username}", autofocus)
           label Password
           input(type="password", name="password", placeholder="Enter Password", value="#{user.password")
           label Confirm
