--- a/hack-express/views/admin/hints/show.jade
+++ b/hack-express/views/admin/hints/show.jade
@@ -22,7 +22,8 @@ block admin_content
         label Title
         input(type="text", name="title", placeholder="Enter Hint Title", value="#{hint.title}", readonly='readonly')
         label Description
-        input(type="textarea", name="description", value="#{hint.description}", readonly='readonly')
+        textarea(name="description", rows="5", readonly='readonly')
+          | #{hint.description}
         label.checkbox Revealed
           - if(hint.revealed){
             input(type="checkbox", name="revealed", checked)
